# gracera_marketplace

./: .dockerignore  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
apps/ai-service/: .env.example  Dockerfile  browser_fetch.py  claude_util.py  coaching.py  config.py  deal_assist.py  extraction.py  internal_auth.py  main.py  matching.py  models.py  public_page.py  pyproject.toml  sourcing_extraction.py  url_safety.py  verification_triage.py
apps/ai-service/routes/: coaching.py  deal_assist.py  extract.py  match.py  public_page.py  verification.py
apps/ai-service/tests/: test_claude_util.py  test_coaching.py  test_deal_assist.py  test_extraction.py  test_matching.py  test_public_page.py  test_sourcing_extraction.py  test_url_safety.py  test_verification_triage.py
designs/: index.html  nginx.conf  web-brutalist.html  web-dark.html  web-editorial.html  web-lattice.html  web-minimal.html  web-poster.html  web-split.html  web-swiss.html  web-terminal.html  web-warm.html
docs/: 01-product-requirements.md  02-user-personas.md  03-system-architecture.md  04-ai-agent-design.md  05-supplier-profile-spec.md  06-buyer-profile-spec.md  07-matching-algorithm.md  08-deal-workflow.md  09-data-model.md  10-api-reference.md  11-internationalization.md  12-security-and-trust.md  13-roadmap.md  14-go-to-market.md  15-monetization.md  16-category-taxonomy.md  17-use-cases.md  18-qa-test-plan.md  19-tech-stack-dev-setup.md  20-admin-ops-spec.md  21-notifications-email-spec.md  22-onboarding-flows.md  23-unit-economics.md  24-competitive-positioning.md  26-runbook.md  (+3 more)
(+116 files in other folders)
